--- a/demo/index.html
+++ b/demo/index.html
@@ -25,6 +25,7 @@
   <link rel="import" href="../../paper-styles/default-theme.html">
   <link rel="import" href="../../iron-form/iron-form.html">
   <link rel="import" href="../../vaadin-button/vaadin-button.html">
+  <link rel="import" href="../../paper-radio-group/paper-radio-group.html">
   <link rel="import" href="../vaadin-radio-button.html">
   <link rel="import" href="../vaadin-radio-button-group.html">
 
