--- a/vaadin-radio-button.html
+++ b/vaadin-radio-button.html
@@ -8,6 +8,7 @@ This program is available under Apache License Version 2.0, available at https:/
 <link rel="import" href="../polymer/lib/mixins/gesture-event-listeners.html">
 <link rel="import" href="../vaadin-themable-mixin/vaadin-themable-mixin.html">
 <link rel="import" href="../vaadin-control-state-mixin/vaadin-control-state-mixin.html">
+<link rel="import" href="../vaadin-development-mode-detector/vaadin-development-mode-detector.html">
 
 <dom-module id="vaadin-radio-button-default-theme" theme-for="vaadin-radio-button">
   <template>
@@ -221,6 +222,7 @@ This program is available under Apache License Version 2.0, available at https:/
        */
       window.Vaadin = window.Vaadin || {};
       Vaadin.RadioButtonElement = RadioButtonElement;
+      Vaadin.runIfDevelopmentMode('vaadin-usage-statistics');
     }
   </script>
 </dom-module>
